[project]
authors = [
  {name = "m09", email = "142691+m09@users.noreply.github.com"},
]
dependencies = [
  "dvc-s3 >= 3",
  "dvc >= 3",
  "jupyter[notebook] >= 1",
]
description = "Add your description here"
license = "Apache-2.0"
name = "dvc-playground"
requires-python = ">=3.12"
version = "0.1.0"
